...
            android:layout_height="wrap_content"
            android:text="First Name:"
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/fam_first"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter First Name Here"></EditText>

    </LinearLayout>

...
            android:layout_height="wrap_content"
            android:text="Last Name:"
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/fam_last"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Last Name Here"></EditText>

    </LinearLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381">

        <EditText
            android:id="@+id/fam_mon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Monthly Income"></EditText>

    </LinearLayout>
    <LinearLayout
...

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Family Plan"
        android:textColor="#fc0303"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
            app:layout_constraintVertical_bias="0.473">


        </TextView>

        <EditText
            android:id="@+id/fam_ann"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Annual Income"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="327dp"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A2561"
        android:text="confirm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
