...
            android:layout_height="wrap_content"
            android:text="Personal:"
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/fam_personal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Personal Expense"></EditText>

    </LinearLayout>

...
            android:layout_height="wrap_content"
            android:text="Work:"
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/fam_work"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Work Expense"></EditText>

    </LinearLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381">

        <EditText
            android:id="@+id/fam_home"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Home Expense"></EditText>

    </LinearLayout>
    <LinearLayout
...
            app:layout_constraintVertical_bias="0.473">


        </TextView>

        <EditText
            android:id="@+id/fam_other"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Other Expense"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="327dp"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_conf_fam"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A2561"
        android:text="Confirm"
        android:textColor="#ffffff"
        android:textSize="20sp"
...
